--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.vr": "1.0.0",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.netcode.gameobjects": "1.8.1",
+    "com.unity.probuilder": "5.2.2",
     "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.services.lobby": "1.2.1",
