--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.meta.xr.sdk.all": "65.0.0",
+    "com.meta.xr.sdk.interaction.ovr.samples": "65.0.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.14",
     "com.unity.cinemachine": "2.9.7",
