--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "9.1.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.14",
     "com.unity.cinemachine": "2.9.7",
@@ -8,6 +9,7 @@
     "com.unity.feature.vr": "1.0.0",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.netcode.gameobjects": "1.8.1",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.probuilder": "5.2.2",
     "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.11",
