--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Assets/Feel/NiceVibrations/OlderVersions/v3.9/NiceVibrations-v-3-9-0.unitypackag
 Assets/Feel/NiceVibrations/OlderVersions/v2.0.1/NiceVibrations-v-2-0-1.unitypackage.meta
 Assets/Feel/NiceVibrations/OlderVersions/v1.7/NiceVibrations-v-1-7.unitypackage.meta
 Assets/Feel/FeelDemos/FeelTemplatesDemo.unitypackage.meta
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
